Erro corrigido do link do GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="https://www.linkedin.com/in/egenheiro-front-end/" target="_blank"a>👨‍💻Linkedin</a>
             </li>
             <li>
-                <a href="github.com/joaop-dev" target="_blank">🐱 GitHub</a>
+                <a href="https://github.com/joaop-dev" target="_blank">🐱 GitHub</a>
             </li>
             <li>
                 <a href="https://discord.gg/Nb2BCyXp" target="_blank">👾 Discord</a>
